# rust-chip8

./: Cargo.toml  README.md
chip8_emulator/: Cargo.toml
chip8_emulator/src/: main.rs
emulator/: Cargo.toml
emulator/src/: app.rs  cli.rs  commands.rs  config.rs  keyboard.rs  lib.rs  rom.rs  sound.rs
lib_chip8/: Cargo.toml
lib_chip8/src/: config.rs  cpu.rs  display.rs  keyboard.rs  lib.rs  memory.rs  parser.rs  stack.rs  timers.rs
libchip8/: Cargo.toml
libchip8/src/: config.rs  cpu.rs  display.rs  lib.rs  memory.rs  stack.rs
src/: cpu.rs  display.rs  keyboard.rs  lib.rs  main.rs  memory.rs  timers.rs
src/lib_chip8/: display.rs  keyboard.rs  mod.rs  timers.rs
