[package]
name = "emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
pixels = "0.15.0"
winit = "0.30.12"
rodio = "0.22.2"
libchip8 = { path = "../libchip8" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
clap = { version = "4.6.1", features = ["derive"] }
